[tool.poetry]
name = "consultant"
version = "0.1.0"
description = ""
authors = ["G0shan4ik <egorkononec64@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
aiohttp = "^3.11.18"
aiofiles = "^24.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
